@@ -311,6 +311,7 @@ All (GUI):
 - Freeze() and Thaw() now recursively freeze/thaw the children too.
 - Generalized wxScrolledWindow into wxScrolled<T> template that can derive
   from any window class, not just wxPanel.
+- Allow having menu separators with ids != wxID_SEPARATOR (Jeff Tupper)
 
 wxGTK:
 
